Sse connection fixed, data streaming
